commit for pr