@@ -2,9 +2,10 @@ package com.soon.petpi.service;
 
 import com.soon.petpi.exception.type.NoPetError;
 import com.soon.petpi.model.dto.pet.PetCalenderResponse;
-import com.soon.petpi.model.dto.pet.PetRequest;
+import com.soon.petpi.model.dto.pet.request.PetRequest;
+import com.soon.petpi.model.dto.pet.request.PetUpdateForm;
 import com.soon.petpi.model.dto.pet.PetResponse;
-import com.soon.petpi.model.dto.pet.PetSaveForm;
+import com.soon.petpi.model.dto.pet.request.PetSaveForm;
 import com.soon.petpi.model.entity.Pet;
 import com.soon.petpi.model.entity.User;
 import com.soon.petpi.repository.PetRepository;
@@ -32,7 +33,7 @@ public class PetService {
 
         User petOwner = userRepository.findById(userIdx).orElse(null);
 
-        Pet pet = petSaveFormToPet(petSaveForm);
+        Pet pet = petRequsetToPet(petSaveForm);
         pet.setUser(petOwner);
 
         petRepository.save(pet);
@@ -40,13 +41,8 @@ public class PetService {
         return pet;
     }
 
-    public List<PetResponse> findAll(Long userIdx) {
-
-        Optional<List<Pet>> petsOptional = petRepository.findByUserIdx(userIdx);
-        return petsOptional.map(pets ->
-                pets.stream().map(this::petToPetResponse)
-                        .collect(Collectors.toList()))
-                .orElse(Collections.emptyList());
+    public List<Pet> findAll(Long userIdx) {
+        return petRepository.findByUserIdx(userIdx).orElse(null);
     }
 
     public Pet findOne(Long petIdx, Long userIdx) {
@@ -58,28 +54,28 @@ public class PetService {
         return pet;
     }
 
-    public Pet update(Long petIdx, Long userIdx, PetRequest petRequest) throws IOException {
+    public Pet update(Long petIdx, Long userIdx, PetUpdateForm petUpdateForm) throws IOException {
 
         Pet savedPet = findOne(petIdx, userIdx);
 
-        log.info(petRequest.toString());
+        log.info(petUpdateForm.toString());
 
-        // Pet 객체 업데이트
-        if (petRequest.getPetName() != null) {
-            savedPet.setPetName(petRequest.getPetName());
+        // PetUpdateForm 변경 값이 존재하는 지 판단하고 해당 부분만을 수정
+        if (petUpdateForm.getPetName() != null) {
+            savedPet.setPetName(petUpdateForm.getPetName());
         }
-        if (petRequest.getPetImage() != null) {
+        if (petUpdateForm.getPetImage() != null) {
             fileStoreService.delete(savedPet.getPetImage());
-            savedPet.setPetImage(fileStoreService.uploadFile(petRequest.getPetImage()).getStoreName());
+            savedPet.setPetImage(fileStoreService.uploadFile(petUpdateForm.getPetImage()).getStoreName());
         }
-        if (petRequest.getPetGender() != null) {
-            savedPet.setPetGender(petRequest.getPetGender());
+        if (petUpdateForm.getPetGender() != null) {
+            savedPet.setPetGender(petUpdateForm.getPetGender());
         }
-        if (petRequest.getPetSpecies() != null) {
-            savedPet.setPetSpecies(petRequest.getPetSpecies());
+        if (petUpdateForm.getPetSpecies() != null) {
+            savedPet.setPetSpecies(petUpdateForm.getPetSpecies());
         }
-        if (petRequest.getPetBirthdate() != null) {
-            savedPet.setPetBirthdate(petRequest.getPetBirthdate());
+        if (petUpdateForm.getPetBirthdate() != null) {
+            savedPet.setPetBirthdate(petUpdateForm.getPetBirthdate());
         }
 
         return petRepository.save(savedPet);
@@ -99,6 +95,7 @@ public class PetService {
     }
 
     public PetCalenderResponse readCalender(Long petIdx, Long userIdx) {
+
         Pet savedPet = petRepository.findByIdCalenderAndUserIdx(petIdx, userIdx).orElse(null);
 
         if (savedPet == null) {
@@ -108,8 +105,9 @@ public class PetService {
         return petToPetCalenderResponse(savedPet);
     }
 
-    public PetResponse petToPetResponse(Pet pet) {
+    public PetResponse petToPetResponse(Pet pet, Long userIdx) {
         return PetResponse.builder()
+                .userIdx(userIdx)
                 .petIdx(pet.getPetIdx())
                 .petSpecies(pet.getPetSpecies())
                 .petBirthdate(pet.getPetBirthdate())
@@ -119,25 +117,14 @@ public class PetService {
                 .build();
     }
 
-    public Pet petRequestToPet(PetRequest petRequest) throws IOException {
+    public Pet petRequsetToPet(PetRequest request) throws IOException {
         return Pet.builder()
-                .petName(petRequest.getPetName())
-                .petSpecies(petRequest.getPetSpecies())
-                .petBirthdate(petRequest.getPetBirthdate())
-                .petImage(fileStoreService.uploadFile(petRequest.getPetImage())
+                .petName(request.getPetName())
+                .petSpecies(request.getPetSpecies())
+                .petBirthdate(request.getPetBirthdate())
+                .petImage(fileStoreService.uploadFile(request.getPetImage())
                         .getStoreName())
-                .petGender(petRequest.getPetGender())
-                .build();
-    }
-
-    public Pet petSaveFormToPet(PetSaveForm petSaveForm) throws IOException {
-        return Pet.builder()
-                .petName(petSaveForm.getPetName())
-                .petSpecies(petSaveForm.getPetSpecies())
-                .petBirthdate(petSaveForm.getPetBirthdate())
-                .petImage(fileStoreService.uploadFile(petSaveForm.getPetImage())
-                        .getStoreName())
-                .petGender(petSaveForm.getPetGender())
+                .petGender(request.getPetGender())
                 .build();
     }
 
@@ -153,7 +140,7 @@ public class PetService {
                                 .diseaseName(disease.getDiseaseName())
                                 .diseaseLabel(disease.getDiseaseLabel())
                                 .build()
-                ).collect(Collectors.toList()))
+                ).toList())
 
                 .calenderHealthStatuses(pet.getHealthStatuses().stream().map(
                         health -> PetCalenderResponse.CalenderHealthStatuses.builder()
@@ -163,7 +150,7 @@ public class PetService {
                                 .petPoo(health.getPetPoo())
                                 .petPee(health.getPetPee())
                                 .build()
-                ).collect(Collectors.toList()))
+                ).toList())
                 .build();
     }
 }
